--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-SECRET_DB="mongodb+srv://nicolasSchneider:T5MSpMLoGrIcu3Bs@cluster0.eb9rcuz.mongodb.net/?retryWrites=true&w=majority"
+SECRET_DB= "Veuillez référencer votre propre BDD"
 
 
 SECRET_TOKEN = variable
